--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "material-icons": "^0.3.1",
     "materialize-css": "^1.0.0-rc.2",
     "register-service-worker": "^1.7.1",
+    "uuid": "^8.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
