--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,7 @@
   "singleQuote": true, 
   "trailingComma": "es5", 
   "parser": "flow",
-  "semi": false 
+  "semi": false,
+  "bracketSpacing": true,
+  "arrowParens": "always" 
 }
